--- a/templates/patient_login.html
+++ b/templates/patient_login.html
@@ -147,5 +147,32 @@
         document.getElementById('loginForm').addEventListener('submit', handleLogin);
     </script>
 
+<script>
+    function viewReport(patientId) {
+        console.error(patientId)
+        const apiUrl = `http://127.0.0.1:8943/report/${patientId}`;
+        fetch(apiUrl)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok: ' + response.statusText);
+                }
+                return response.blob(); 
+            })
+            .then(blob => {
+                const url = window.URL.createObjectURL(new Blob([blob]));
+                const link = document.createElement('a');
+                link.href = url;
+                link.setAttribute('download', `report_${patientId}.pdf`); 
+                document.body.appendChild(link);
+                link.click();
+                link.parentNode.removeChild(link);
+                alert("Report downloaded successfully!");
+            })
+            .catch(error => {
+                console.error('Error fetching report:', error);
+                alert('Error fetching report. Please try again later.');
+            });
+        }
+    </script>
 </body>
 </html>
